# projeto_automacao_teste

./: .gitignore  CMakeLists.txt  README.md  main.cpp  motor_de_passos.ino  placa.cpp  placa.h
.qtcreator/: project.json
